# ez-aquarii

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  autoreload  buf.gen.yaml  camera.json  camera.sh  camsync.sh  config.yaml  controllersync.sh  deploy.sh  go.mod  go.sum  main.go  pi_dev.sh  watchsync.sh
camera/: __main__.py  __main__.py.ad7bda5a11bcb2084f7c859952b8f74b.tmp  camerastream.py  config.json  config.py  config_handler.py  edges.py  fill.py  filter.py  ipc.py  streaming.py  test.py
camera/cpv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ez  main.cpp
camera/experiments/: bytes.py  camerastream.py  constants.py  filter.py  imhost.py  imserve.py  line.py  record.py  take.py  utils.py
camera/handlers/: __init__.py  constants.py  detection.py  display.py  math_ext.py  noop.py  test.py  utils.py
camera/lib/: camera.py  ipc.py  streaming.py
camex/: Cargo.toml
camex/src/: main.rs
config/: config.go  default.yml
controller/: .gitignore  .gitlab-ci-controller.yml  Cargo.toml  README.md  buf.gen.yaml  build.rs  config.toml  config.yaml  controller.go  go.mod  state.json
controller/.cargo/: config
controller/config/: config.go
controller/controller/module/: module.go
controller/include/: imageprovider.h
controller/ipc/: ipc.go  ipc_test.go
controller/module/camera/: camera.go
controller/protocol/: comms.proto
controller/src/: config.rs  ipc.rs  lib.rs  main.rs  recorder.rs
controller/src/math/: angles.rs  map_range.rs  mod.rs  vec2.rs
controller/src/modules/: camera.rs  kicker.rs  line.rs  line_test.rs  mod.rs  motors.rs  racing.rs  reader.rs  server.rs  state.rs  state_randomizer.rs  state_recorder.rs  strategy.rs
controller/src/modules/camera/: cv.rs  mod.rs
controller/state/: state.go
debugger/: components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  unocss.config.ts  vite.config.ts  vitest.config.ts  windi.config.ts
debugger/src/: App.tsx  App.vue  BallView.vue  CameraView.tsx  LineView.vue  RobotView.tsx  SettingsPanel.tsx  data_sources.ts  index.css  index.tsx  main.ts
debugger/src/Base/: BaseButton.tsx  BaseSlider.tsx  Split.tsx
debugger/src/assets/: base.css
debugger/src/components/: BaseButton.vue  BaseRadioButton.vue  BaseSlider.vue  BaseTabs.vue  BaseTextField.vue  JSONEditor.tsx  JSONEditor.vue  MagnitudeDisplay.tsx  MotorCommand.tsx  VectorPicker.tsx
debugger/src/components/Base/: BaseCheckBox.tsx  BaseInput.tsx  BaseRadioButton.tsx  BaseSlider.tsx  IconButton.tsx  Label.tsx  shimmer.ts
debugger/src/helpers/: createStoredSignal.test.ts  createStoredSignal.ts
debugger/src/logic/: canvas.ts  dataManager.ts  dataSources.ts
ez-36/lib/LTC2496/src/: LTC2496.cpp  LTC2496.h
ez-36/lib/LTC24XX_general/src/: LTC24XX_general.cpp  LTC24XX_general.h
ffitest/cffi/: CMakeCache.txt  CMakeLists.txt  Makefile  cffi  cmake_install.cmake  main.cpp
ffitest/rffi/: Cargo.toml
ffitest/rffi/src/: main.rs
ipc/: ipc.go
logger/: logger.go
motortester/src/: main.cpp
nffi/: CMakeLists.txt  Cargo.toml  build.rs
nffi/include/: imageprovider.h
nffi/src/: imageprovider.cc  main.rs
pibot/: pibot.py  pibot.service  requirements.txt
protocol/: comms.proto
reader/include/LTC2496/: LTC2496.cpp
reader/lib/LTC2496/: LTC2496.cpp  LTC2496.h  LTC24XX_general.cpp  LTC24XX_general.h
reader/lib/LT_STD/: LT_SPI.cpp  LT_SPI.h  Linduino.h
reader/src/: main.cpp
reader2/: platformio.ini
reader2/src/: SerialReader.h  config.h  main.cpp  main_debug._cpp
rffi/: Cargo.toml  build.rs
rffi/include/: blobstore.h
rffi/src/: blobstore.cc  main.rs
scripts/: camera.sh  controller.sh
sockettest/csock/: CMakeCache.txt  Makefile  cmake_install.cmake  csock  main.cpp
sockettest/rsock/: Cargo.toml
sockettest/rsock/src/: main.rs
