[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
crossbeam-channel = "0.5.1"
notify = "5.0.0-pre.13"
parking_lot = "0.11.2"
byteorder = "1.4.3"
prost = "0.9"
prost-types = "0.9"
anyhow = "1.0.51"
bytes = "1.1.0"

[build-dependencies]
prost-build = "0.9.0"
