[package]
name = "controller"
version = "0.1.0"
edition = "2021"
links = "controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.2"
byteorder = "1.4.3"
anyhow = "1.0.51"
bytes = "1.1.0"
serde_yaml = "0.8.21"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
async-trait = "0.1.52"
futures = "0.3.19"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
async-recursion = "1.0.0"
serde_json = "1.0.74"
num = "0.4.0"
test-case = "1.2.3"
tokio-serial = "5.4.2"
axum = { version = "0.5.0", features = ["ws"] }
tower-http = { version = "0.2.5", features = ["cors"] }
rand = "0.8.5"
rmp-serde = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
cxx = "1.0"
opencv = "0.65.0"
tokio-stream = { version = "0.1.9", features = ['sync'] }
rayon = "1.5.3"
flume = "0.10.13"

[build-dependencies]
cxx-build = "1.0.68"
