[package]
name = "nffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
cxx= "1.0"
opencv = "0.65.0"
anyhow = "1.0.57"
image = "0.24.2"
ndarray = "0.15.4"

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3.25"
